# WirtualnySwiatCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WirtualnySwiatCpp.sln  vcpkg.json
WirtualnySwiatCpp/: WirtualnySwiatCpp.vcxproj  WirtualnySwiatCpp.vcxproj.filters
saves/: test.txt
src/: main.cpp
src/gui/: App.cpp  App.h  Renderer.cpp  Renderer.h  Teksty.cpp  Teksty.h  Zasoby.cpp  Zasoby.h
src/organizmy/: Antylopa.cpp  Antylopa.h  BarszczSosnowskiego.cpp  BarszczSosnowskiego.h  Czlowiek.cpp  Czlowiek.h  Guarana.cpp  Guarana.h  Lis.cpp  Lis.h  Mlecz.cpp  Mlecz.h  Organizm.cpp  Organizm.h  Owca.cpp  Owca.h  Roslina.cpp  Roslina.h  Trawa.cpp  Trawa.h  Typy.cpp  Typy.h  WilczeJagody.cpp  WilczeJagody.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h  Zwierze.cpp  Zwierze.h
src/swiat/: Rng.cpp  Rng.h  Swiat.cpp  Swiat.h
